--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,9 +9,12 @@ branches:
 build: off  # будем использовать свой скрипт сборки
 
 install:
+  # добавления прав на запуск файла gradlew
+  - chmod +x gradlew
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-order.jar &
+  - java -jar ./artifacts/app-card-delivery.jar &
 
 build_script:
-  -  chmod +x gradlew
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  # запускаем тест, флаг --info позволяет выводить больше информации, флаг -Dselenide.headless=true запуск selenide
+  # в headless-режиме
+  - ./gradlew test --info -Dselenide.headless=true
